src/objects/Case_Comment_Clone__c.object
<CustomObject>
    <fields>
        <fullName>CommentBody__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CommentBody</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatorName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CreatorName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotificationSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNotificationSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comments Clone</relationshipLabel>
        <relationshipName>ParentId</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Comment Clone</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Case Comment Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments Clone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>